new input on the form, now users need to insert a valid api key to access the weather

--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
         </button>
         </div>
         <div class="formDiv">
-        <h1>Previsão do Tempo</h1>
+        <h1>Wheater App</h1>
         <form id="weather-form">
+            <input type="text" id="api-key" placeholder="Digite a sua chave OpenWheaterAPI">
             <input type="text" id="city" placeholder="Digite o nome da cidade">
-            <button type="submit">Consultar</button>
+            <button type="submit">Consultar</button>      
         </form>
+        
         </div>
         <div id="weather-info">
             <div class="content" style="display: none;">
